targets/srv0/k3s/opodsync/opodsync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opodsync
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opodsync
  template:
    metadata:
      labels:
        app: opodsync
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: opodsync
          image: ganeshlab/opodsync:0.5.3-amd64
          securityContext:
            runAsUser: $MY_UID
            runAsGroup: $MY_UID
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: opodsync-data
              mountPath: /var/www/server/data
      volumes:
        - name: opodsync-data
          persistentVolumeClaim:
            claimName: opodsync-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: opodsync
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: opodsync
  ports:
    - port: 8080
      targetPort: 8080
