targets/srv0/k3s/opodsync/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opodsync-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`opodsync.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: authelia-with-optional-header-gate
          namespace: base
      services:
        - name: opodsync
          port: 8080
  tls:
    secretName: opodsync-prod-tls
